--- a/Playground.xaml
+++ b/Playground.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Playground" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1269,1948" sap2010:WorkflowViewState.IdRef="Playground_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Playground" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1358,2437" sap2010:WorkflowViewState.IdRef="Playground_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
       <x:String>System.Activities</x:String>
@@ -53,7 +53,7 @@
       <AssemblyReference>UiPath.Database</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Playground" sap:VirtualizedContainerService.HintSize="532,1783" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Playground" sap:VirtualizedContainerService.HintSize="532,2272" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:Dictionary(x:String, x:Object)" Name="configfile" />
       <Variable x:TypeArguments="sd:DataTable" Name="infradt" />
@@ -63,6 +63,9 @@
       <Variable x:TypeArguments="scg:List(x:String)" Name="partnersId" />
       <Variable x:TypeArguments="ui:DatabaseConnection" Name="dbConnection" />
       <Variable x:TypeArguments="x:String" Name="rpaText" />
+      <Variable x:TypeArguments="x:String" Name="infraText" />
+      <Variable x:TypeArguments="x:String" Name="saText" />
+      <Variable x:TypeArguments="x:String" Name="baText" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -88,8 +91,14 @@
         <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[dbConnection]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="490,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[rpaText]" />
     <ui:OutputDataTable DataTable="[rpaDt]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="490,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[rpaText]" />
+    <ui:OutputDataTable DataTable="[infradt]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="490,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_2" Text="[infraText]" />
+    <ui:OutputDataTable DataTable="[saDt]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="490,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_3" Text="[saText]" />
+    <ui:OutputDataTable DataTable="[baDt]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="490,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_4" Text="[baText]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="490,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;RPA:&quot; + Environment.NewLine + rpaText]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="490,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[&quot;BA:&quot; + Environment.NewLine + baText]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="490,61" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="[&quot;Infra:&quot; + Environment.NewLine + infraText]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="490,61" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;SA:&quot; + Environment.NewLine + saText]" />
     <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="490,878" sap2010:WorkflowViewState.IdRef="CommentOut_2">
       <ui:CommentOut.Body>
         <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="454,800" sap2010:WorkflowViewState.IdRef="Sequence_4">
